--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
 
-      # Runs a single command using the runners shell
+      - name: CD
+        run: cd api
+
       - name: Go test
         run: go test
 
